# GPT-Tutor-Generator

./: .gitignore  .token-savior-cache.json  .windsurfrules  2026-04-09-141619-this-session-is-being-continued-from-a-previous-c.txt  2026-04-09-194024-this-session-is-being-continued-from-a-previous-c.txt  AGENTS.md  CLAUDE.md  CLAUDE_HANDOFF.md  LLM.md  README.md  ROADMAP.md  academic_tutor_repo_builder_v3.py  datas.md  datas.txt  last.jsonl  out.txt  prompt.md  pyproject.toml  requirements.txt  run.bat  run.ps1
.claude/: settings.json  settings.local.json
.mex/: AGENTS.md  ROUTER.md  SETUP.md  SYNC.md  config.json
LLM_Context/: CLAUDE.md  CLAUDE_HANDOFF.md  CODEX.md
docs/: CHATGPT_HANDOFF_PROMPT.md  deeptutor-soul-template.md
src/: __main__.py
tests/: test_card_evidence.py  test_code_review_profiles.py  test_consolidate_unit.py  test_core.py  test_datalab_captions.py  test_datalab_image_extraction.py  test_date_prefix_signal.py  test_ddmm_timeline_boost.py  test_file_map_unit_mapping.py  test_html_schedule_parser.py  test_image_curation.py  test_manual_timeline_block_resolution.py  test_migrate_student_state.py  test_power_management.py  test_prompt_generation_v2.py  test_rag_enrichment.py  test_repo_dashboard.py  test_resolve_unit_block_tags.py  test_semantic_profile.py  test_student_state_integration.py  test_student_state_manual_import.py  test_student_state_v2.py  test_tag_catalog.py  test_tag_scoring.py  test_task_queue.py  test_timeline_dashboard_data.py  test_timeline_index_kind.py  test_timeline_scoring_ignored.py  test_timeline_signals.py  (+2 more)
(+158 files in other folders)
